# social-robotics-warriors

./: .gitignore  README.md  update_ros_pkg.sh
obj_rec/: CMakeLists.txt  manifest.xml
obj_rec/launch/: obj_rec_3d.launch
obj_rec/msg/: Percept.msg  Percept3d.msg  Percepts.msg  Percepts3d.msg
obj_rec/src/: Blob.cpp  Blob.h  ColorTable.cpp  ColorTable.h  DataFitting.cpp  DataFitting.h  Object.cpp  Object.h  Vision.cpp  Vision.h  percept3d.cpp  recognition.cpp  setup.cpp
obj_rec/src/obj_rec/msg/: _Percept.py  _Percept3d.py  _Percepts.py  _Percepts3d.py  __init__.py
obj_rec/src/obj_rec/srv/: __init__.py  _addColor.py  _addPercept.py
obj_rec/srv/: addColor.srv  addPercept.srv
